--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -55,11 +60,7 @@ a:hover {
 
 /* Header */
 
-#header-wrapper {
-    overflow: hidden;
-}
-
-#header {
+header {
     width: 1000px;
     height: 150px;
     margin: 0 auto;
@@ -159,7 +160,7 @@ a:hover {
 
 /* Menu */
 
-#menu {
+nav {
     float: right;
     width: 500px;
     height: 90px;
@@ -167,7 +168,7 @@ a:hover {
     padding: 0;
 }
 
-#menu ul {
+nav ul {
     float: right;
     margin: 0;
     padding: 20px 0px 0px 0px;
@@ -175,11 +176,10 @@ a:hover {
     line-height: normal;
 }
 
-#menu li {
+nav li {
     float: left;
-}
 
-#menu a {
+nav a {
     display: block;
     line-height: 100px;
     margin-right: 1px;
@@ -195,14 +195,16 @@ a:hover {
     border: none;
 }
 
-#menu a:hover, #menu .current_page_item a {
+nav a:hover, #menu .current_page_item a {
     background: url(../img/img01.jpg) repeat;
     text-decoration: none;
     color: #FFFFFF;
 }
 
-#menu .current_page_item a {
+nav .current_page_item a {
 }
+
+
 
 /* Page */
 
@@ -443,7 +445,7 @@ a:hover {
 
 /* Footer */
 
-#footer {
+footer {
     height: 140px;
     margin: 0 auto;
     padding: 50px 0 15px 0;
