--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,3 @@
-* {
-	margin: 0;
-	padding: 0;
-}
-
 body {
     margin: 0;
     padding: 0;
@@ -39,9 +34,6 @@ p, ul, ol {
     line-height: 180%;
 }
 
-ul, ol {
-}
-
 a {
     color: #5E5E5E;
 }
@@ -56,7 +48,11 @@ a {
 }
 
 /* Header */
-header {
+#header-wrapper {
+    overflow: hidden;
+}
+
+#header {
     width: 1000px;
     height: 150px;
     margin: 0 auto;
@@ -149,7 +145,7 @@ header {
 }
 
 /* Menu */
-nav {
+#menu {
     float: right;
     width: 500px;
     height: 90px;
@@ -157,7 +153,7 @@ nav {
     padding: 0;
 }
 
-nav ul {
+#menu ul {
     float: right;
     margin: 0;
     padding: 20px 0px 0px 0px;
@@ -165,10 +161,11 @@ nav ul {
     line-height: normal;
 }
 
-nav li {
+#menu li {
     float: left;
+}
 
-nav a {
+#menu a {
     display: block;
     line-height: 100px;
     margin-right: 1px;
@@ -184,7 +181,7 @@ nav a {
     border: none;
 }
 
-nav a:hover, #menu .current_page_item a {
+#menu a:hover, #menu .current_page_item a {
     background: url(../img/img01.jpg) repeat;
     text-decoration: none;
     color: #FFFFFF;
@@ -400,7 +397,7 @@ nav a:hover, #menu .current_page_item a {
 }
 
 /* Footer */
-footer {
+#footer {
     height: 140px;
     margin: 0 auto;
     padding: 50px 0 15px 0;
