--- a/css/main.css
+++ b/css/main.css
@@ -456,11 +456,13 @@ a {
 
 #banner {
     margin: 0px auto;
-    width: 1000px;
-    height: 340px;
-    background: url(../img/img03.png) no-repeat left bottom;
 }
 
+#banner img {
+    height: auto;
+    width: 100%;
+}
+    
 .list-style1 {
     margin: 0px;
     padding: 0px;
