--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: #050505 url(../img/img01.jpg) repeat;
+    background: #050505 url(../img/img01.jpg);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     color: #5B5B5B;
@@ -47,20 +47,15 @@ a {
 }
 
 /* Header */
-#header-wrapper {
-    overflow: hidden;
-}
 
 #header {
-    height: 150px;
     margin: 0 auto;
     padding: 0px 0px;
 }
 
 /* Logo */
 #logo {
-    float: left;
-    width: 300px;
+    width: 100%;
     margin: 0;
     padding: 0;
     color: #FFFFFF;
@@ -106,7 +101,6 @@ a {
 
 /* Search */
 #search {
-    float: right;
     width: 280px;
     height: 60px;
     padding: 20px 0px 0px 0px;
@@ -144,15 +138,11 @@ a {
 
 /* Menu */
 #menu {
-    float: right;
-    width: 500px;
-    height: 90px;
     margin: 0 auto;
     padding: 0;
 }
 
 #menu ul {
-    float: right;
     margin: 0;
     padding: 20px 0px 0px 0px;
     list-style: none;
@@ -160,12 +150,12 @@ a {
 }
 
 #menu li {
-    float: left;
+    display: inline;
 }
 
 #menu a {
     display: block;
-    line-height: 100px;
+    line-height: 100%;
     margin-right: 1px;
     padding: 0px 20px 0px 20px;
     text-decoration: none;
@@ -180,7 +170,7 @@ a {
 }
 
 #menu a:hover, #menu .current_page_item a {
-    background: url(../img/img01.jpg) repeat;
+    background: url(../img/img01.jpg);
     text-decoration: none;
     color: #FFFFFF;
 }
@@ -234,7 +224,6 @@ a {
 
 .more {
     display: block;
-    float: left;
     width: 88px;
     padding: 5px 5px;
     margin-right: 10px;
@@ -246,7 +235,6 @@ a {
 
 .comments {
     display: block;
-    float: left;
     width: 88px;
     padding: 5px 5px;
     background: #222222;
