--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ a {
 }
 
 #logo h1 {
-    line-height: 120px;
+    line-height: 100%;
     letter-spacing: -2px;
     font-size: 3.8em;
 }
@@ -89,50 +89,6 @@ a {
     border: none;
     background: none;
     text-decoration: none;
-    color: #000000;
-}
-
-/* Splash */
-#splash {
-    width: 960px;
-    height: 300px;
-    margin: 0px auto;
-}
-
-/* Search */
-#search {
-    width: 280px;
-    height: 60px;
-    padding: 20px 0px 0px 0px;
-}
-
-#search form {
-    height: 41px;
-    margin: 0;
-    padding: 10px 0 0 20px;
-}
-
-#search fieldset {
-    margin: 0;
-    padding: 0;
-    border: none;
-}
-
-#search-text {
-    width: 170px;
-    padding: 6px 5px 2px 5px;
-    border: 1px solid #E7EBED;
-    background: #FFFFFF;
-    text-transform: lowercase;
-    font: normal 11px Arial, Helvetica, sans-serif;
-    color: #5D781D;
-}
-
-#search-submit {
-    width: 50px;
-    height: 22px;
-    border: none;
-    background: #B9B9B9;
     color: #000000;
 }
 
@@ -183,7 +139,7 @@ a {
 
 /* Content */
 #content {
-    padding: 0px 0px 0px 0px;
+    padding: 5px 5px 5px 5px;
 }
 
 .post {
@@ -251,7 +207,7 @@ a {
 
 #sidebar ul {
     margin: 0;
-    padding: 0;
+    padding: 5px;
     list-style: none;
 }
 
