--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,6 @@ html {
 body {
     margin: 0;
     padding: 0;
-    background: #050505 url(../img/img01.jpg);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     color: #5B5B5B;
@@ -54,6 +53,7 @@ a {
 
 .container {
     margin: 0px auto;
+    max-width: 1200px;
 }
 
 /* Header */
