--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 1em;
     color: #5B5B5B;
 }
 
@@ -110,7 +110,7 @@ a {
 
 #menu ul {
     margin: 0;
-    padding: 20px 0px 10px 0px;
+    padding: 1em;
     list-style: none;
     line-height: normal;
 }
@@ -123,13 +123,12 @@ a {
     display: block;
     line-height: 100%;
     margin-right: 1px;
-    padding: 5px 20px 5px 20px;
+    padding: 1em;
     text-decoration: none;
     text-align: center;
     text-shadow: 1px 1px 0px rgba(0,0,0,.2);
     text-transform: uppercase;
     font-family: 'Oswald', sans-serif;
-    font-size: 16px;
     font-weight: 300;
     color: #1F1F1F;
     border: none;
